[package]
name = "ebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = { version = "0.17.0", default-features = false, features = ["http-rustls-tls"] }
clap = { version = "3.0.14", features = ["derive"] }
error-chain = "0.12.4"

[dev-dependencies]
serial_test = "*"
